[package]
name = "trust-ecies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
bytes.workspace = true
educe = "0.4.19"
ethereum-types.workspace = true

## Crypto
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"]}
aes = "0.8.1"
digest = "0.10.5"
ctr = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.6"
sha3 = "0.10.5"
