[package]
name = "trust-ecies"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
bytes.workspace = true
educe = "0.4.19"
ethereum-types.workspace = true
trust-rlp.workspace = true
block-padding = "0.3.2"

##HeaderBytes
generic-array = "0.14.6"
typenum = "1.15.0"
byteorder = "1.4.3"

## Crypto
secp256k1 = { workspace = true, features = ["global-context", "rand-std", "recovery"]}
aes = "0.8.1"
digest = "0.10.5"
ctr = "0.9.2"
hmac = "0.12.1"
sha2 = "0.10.6"
sha3 = "0.10.5"
cipher = { version = "0.4.3", features = ["block-padding"] }
